PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.4.0 RC1
- Core:
  . Fixed bug #55707 (undefined reference to `__sync_fetch_and_add_4' on Linux
    parisc). (Felipe)
  . Fixed bug #55705 (Omitting a callable typehinted argument causes a segfault).
    (Felipe, Laruence)
  . Fixed bug #55758 (Digest Authenticate missed in 5.4) . (Laruence)

- Zlib:
  . Fixed bug #55544 (ob_gzhandler always conflicts with 
    zlib.output_compression). (Mike)

- CLI SAPI:
  . Fixed bug #55726 (Changing the working directory makes router script
    inaccessible). (Laruence)
  . Fixed bug #55747 (request headers missed in $_SERVER). (Laruence)
  . Fixed bug #55755 (SegFault when outputting header WWW-Authenticate). (Laruence)

15 Sep 2011, PHP 5.4.0 Beta
- General improvements:
  . Added callable typehint. (Hannes)
  . Implemented closure rebinding as parameter to bindTo. (Gustavo Lopes)
  . Turn on html_errors by default again in php.ini-production like it was in
    PHP 5.3, but only generate docref links when the docref_root INI setting is
    not empty. (Derick)
  . Fixed bug #55378: Binary number literal returns float number though its
    value is small enough. (Derick)
  . Added support for SORT_NATURAL and SORT_FLAG_CASE in array
    sort functions (sort, rsort, ksort, krsort, asort, arsort and
    array_multisort). FR#55158 (Arpad)
  . Disable windows CRT warning by default, can be enabled again using the ini 
    directive windows_show_crt_warnings. (Pierre)
  . Removed support for putenv("TZ=..") for setting the timezone. (Derick)
  . Removed the timezone guessing algorithm in case the timezone isn't set with
    date.timezone or date_default_timezone_set(). Instead of a guessed
    timezone, "UTC" is now used instead. (Derick)

- Improved MySQL extensions:
  . ext/mysql, mysqli and pdo_mysql now use mysqlnd by default. (Johannes)
