@@ -9,6 +9,6 @@ Class D extends C { function f(array $a) {} }
 ?>
 ==DONE==
 --EXPECTF--
-Strict Standards: Declaration of D::f() should be compatible with that of C::f() in %s on line 5
+Strict Standards: Declaration of D::f() should be compatible with C::f($a) in %s on line 5
 Array hint, should be nothing.
 ==DONE==
