@@ -1,6 +1,9 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2011, PHP 5.4.0 RC1
+- General improvements:
+  . Improve the warning message of incompatible arguments. (Laruence) 
+
 - Core:
   . Fixed bug #55707 (undefined reference to `__sync_fetch_and_add_4' on Linux
     parisc). (Felipe)
